2005-03-17  Kristian Høgsberg  <krh@redhat.com>

	From Tor Lillqvist <tml@novell.com>:

	* test/cairo_test.c (cairo_test): Open output PNG files in binary
	mode.

2005-03-17  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.h src/cairo_surface.c src/cairo-xlib.h
	src/cairo_xlib_surface.c: Move cairo_xlib_surface_set_device_offset()
	to a generic cairo_surface_set_device_offset().

	* src/cairo_gstate.c: Take the surface's device offset into
	account.

	* doc/public/cairo-sections.txt: Update.

2005-03-17  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_matrix.c: Fix the docs to to correctly describe
	the order of transformation for muliply/scale/rotate/translate.
	(cairo_matrix_translate): Fix translate/rotate typo in the
	parameter descriptions.

2005-03-17  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_output_stream.c: Forgot to add this file.

2005-03-16  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_surface.c (_destroy_user_data)
	(cairo_surface_set_user_data): Dont call user data destroy
	function if it's NULL.

	* test/user_data.c: (main): Add test case for user data with NULL
	destroy function.

2005-03-16  Kristian Høgsberg  <krh@redhat.com>

	* src/Makefile.am: Add cairo_output_stream.c

	* src/cairo.h: Add new errors, CAIRO_STATUS_WRITE_ERROR and
	CAIRO_STATUS_SURFACE_FINISHED, add cairo_surface_finish()
	prototype, add cairo_write_func_t.

	* src/cairo.c: Add strings for new errors, documentation fix.
	
	* src/cairo_win32_surface.c:
	* src/cairo_xcb_surface.c:
	* src/cairo_xlib_surface.c:
	* src/cairo_glitz_surface.c:
	* src/cairo_image_surface.c:
	* src/cairo_png_surface.c:
	* src/cairo_ps_surface.c: Rename surface destroy functions to
	finish and change them to not free the surface.
	
	* src/cairo-pdf.h:
	* src/cairo_pdf_surface.c: Change PDF surface constructors to take
	a write function in the general case and add stdio convenience
	constructors.  Change destroy function to finish for
	cairo_pdf_surface.  Change implementation to use